[package]
name = "klandestin"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.15.0", features = ["full", "macros"] }
teloxide-core = "0.11.2"
tokio = { version = "1.44.2", features = ["tracing", "macros", "rt-multi-thread", "signal", "process"] }
